# thechangelogbot-backend

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  api_runner.sh  config.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
notebooks/: analysis.ipynb
src/thechangelogbot/api/: main.py
src/thechangelogbot/common/: main.py  parse.py
src/thechangelogbot/conf/: load_config.py
src/thechangelogbot/engine/: database.py  embeddings.py  main.py  parser.py  snippet.py
src/thechangelogbot/index/: chat.py  database.py  embeddings.py  parser.py  snippet.py
src/thechangelogbot/util/: create_database.py  index_podcasts.py  search_database.py
tests/: test_api.py  test_thechangelogbot.py
