[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "thechangelogbot"
version = "23.5.24"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "pandas",
  "GitPython",
  "sentence-transformers",
  "superduperdb",
  "loguru",
  "numpy",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "black",
  "pytest",
  "pytest-cov",
  "ruff",
  "watchdog",
  "httpx",
  "isort",
]

[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "I", "W"]
line-length = 79
fixable = ["I", "F401"]
exclude = [".env", ".venv", "venv", "notebooks"]
show-source = true

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
# fail_under = 80

[tool.black]
line-length = 79
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
)/
'''

[tool.isort]
profile = "black"

[project.scripts]
index-podcasts = "thechangelogbot.util.index_podcasts:index"
create-database = "thechangelogbot.util.create_database:prepare_database"
search-database = "thechangelogbot.util.search_database:search"
